--- a/client/src/_codux/boards/main.board.css
+++ b/client/src/_codux/boards/main.board.css
@@ -35,16 +35,18 @@
 .MainBoard_div3 {
   background-color: #806969;
   width: 100%;
-  height: 95%;
   display: flex;
   justify-content: center;
   align-items: center;
   align-content: center;
-  position: relative;
+  position: absolute;
   opacity: 1;
+  overflow: visible;
+  height: 100%;
+  z-index: 9;
 }
 .MainBoard_grid {
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   flex: 0 1 auto;
   position: relative;
@@ -71,17 +73,42 @@
   position: relative;
   width: 100%;
   max-width: 30vh;
-  flex-grow: 1; 
+  flex-grow: 1;
   box-sizing: border-box;
 }
 
 /* Fix for unequal button stacking in grid */
 @media (max-width: 1500px) {
   .MainBoard_grid {
-    flex-direction: column; 
+    flex-direction: column;
   }
 
   .MainBoard_gridButton {
     flex-basis: 100%;
   }
+}
+.MainBoard_div4 {
+  width: 100%;
+  height: 95%;
+  position: relative;
+  z-index: 10;
+}
+.MainBoard_div5 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  background-image: url("https://static.wixstatic.com/media/d9657b20f1b9473f90815b9da211bb2a.jpg/v1/fit/w_924,h_520/d9657b20f1b9473f90815b9da211bb2a.jpg");
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: cover;
+  background-attachment: scroll;
+  background-origin: padding-box;
+  background-clip: border-box;
+  z-index: 8;
+}
+.MainBoard_div6 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
