--- a/client/src/boards/main.board.css
+++ b/client/src/boards/main.board.css
@@ -9,6 +9,14 @@
   right: 0px;
   min-height: 160px;
 }
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: block;
+}
+
 .MainBoard_header {
   background-color: #a32323;
   width: 100%;
@@ -100,7 +108,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: transparent;
+  background-color: yellow;
   background-image: url("https://static.wixstatic.com/media/d9657b20f1b9473f90815b9da211bb2a.jpg/v1/fit/w_924,h_520/d9657b20f1b9473f90815b9da211bb2a.jpg");
   background-repeat: no-repeat;
   background-position: 50%;
