--- a/client/src/boards/main.board.css
+++ b/client/src/boards/main.board.css
@@ -108,7 +108,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   flex-direction: column;
   background-color: yellow;
   background-image: url("https://static.wixstatic.com/media/d9657b20f1b9473f90815b9da211bb2a.jpg/v1/fit/w_924,h_520/d9657b20f1b9473f90815b9da211bb2a.jpg");
@@ -145,6 +145,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  flex: none;
 }
 
 .MainBoard_returnButton {
@@ -158,4 +159,12 @@
   box-sizing: border-box;  
 }
 
-
+.MainBoard_loginPage{
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: orange;
+}
