--- a/client/src/boards/main.board.css
+++ b/client/src/boards/main.board.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: #806969;
+  background-color: #AAB396;
   top: 0px;
   bottom: 0px;
   left: 0px;
