--- a/client/src/boards/main.board.css
+++ b/client/src/boards/main.board.css
@@ -114,8 +114,8 @@
   height: 100%;
   display: none;
   flex-direction: column;
-  background-color: yellow;
-  background-image: url("https://static.wixstatic.com/media/d9657b20f1b9473f90815b9da211bb2a.jpg/v1/fit/w_924,h_520/d9657b20f1b9473f90815b9da211bb2a.jpg");
+  background-color: #AAB396;
+  /*background-image: url("https://static.wixstatic.com/media/d9657b20f1b9473f90815b9da211bb2a.jpg/v1/fit/w_924,h_520/d9657b20f1b9473f90815b9da211bb2a.jpg");*/
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
@@ -133,6 +133,7 @@
   box-sizing: border-box;
 }
 
+/*
 .mode1_innerDiv:nth-child(1) {
   background-color: yellow;
 }
@@ -144,6 +145,7 @@
 .mode1_innerDiv:nth-child(3) {
   background-color: red;
 }
+*/
 
 .MainBoard_mode2 {
   width: 100%;
@@ -171,4 +173,5 @@
   width: 100%;
   height: 100%;
   background-color: orange;
+  z-index: 50;
 }
