--- a/client/src/boards/main.board.css
+++ b/client/src/boards/main.board.css
@@ -20,6 +20,10 @@
 .MainBoard_header {
   width: 100%;
   height: 5%;
+  display: flex;
+  justify-content: right;
+  align-items: right;
+  right: 0;
   min-height: 16px;
 }
 
@@ -28,7 +32,7 @@
   flex: 0 1 auto;
   aspect-ratio: 1/1;
   align-items: center;
-  float: right;
+  float: left;
   align-content: center;
   justify-content: center;
   flex-wrap: nowrap;
