--- a/client/src/boards/main.board.css
+++ b/client/src/boards/main.board.css
@@ -24,6 +24,7 @@
   justify-content: right;
   align-items: right;
   right: 0;
+  
   min-height: 16px;
 }
 
@@ -171,12 +172,12 @@
 
 .MainBoard_loginPage{
   display: none;
+  position: absolute;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: orange;
   z-index: 50;
 }
 
