Renamed css folder, started login layout
Also created an interface for receiving API data to avoid errors showing up within VS Code.

--- a/client/src/boards/css/main.board.css
+++ b/client/src/boards/css/main.board.css
@@ -147,6 +147,7 @@
   box-sizing: border-box;  
 }
 
+/*
 .MainBoard_loginPage{
   display: none;
   position: absolute;
@@ -157,6 +158,7 @@
   height: 100%;
   z-index: 50;
 }
+*/
 
 .mode1TextDiv {
   width: 80%;
