--- a/client/src/boards/css/loginPage.css
+++ b/client/src/boards/css/loginPage.css
@@ -4,12 +4,15 @@
     justify-content: center;
     height: 100%;
     z-index: 30;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 }
 
 .loginPage_topDiv {
     flex: 1;
-    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    /* background-color: blue; */
 }
 
 .loginPage_loginDiv {
@@ -17,7 +20,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .signinInput {
@@ -35,14 +38,24 @@
 
 .loginPage_noAccountText {
     font-size: 1.5em;
+    margin-bottom: 1em;
     color: white;
     text-align: center;
 }
+
+.loginPage_links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
+  }  
 
 .loginPage_bottomDiv {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: top-center;
-    background-color: greenyellow;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: center; 
+    /* background-color: greenyellow; */
 }
