--- a/client/src/boards/css/loginPage.css
+++ b/client/src/boards/css/loginPage.css
@@ -1,10 +1,33 @@
 .MainBoard_loginPage {
     display: none;
+    position: relative;
     flex-direction: column;
     justify-content: center;
     height: 100%;
     z-index: 30;
     /* background-color: aquamarine; */
+}
+
+.loginContainer {
+    width: 100%;
+    height: 100%;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #AAB396;
+    position: absolute;
+    z-index: -1;
+}
+
+.registerContainer {
+    width: 100%;
+    height: 100%;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #AAB396;
+    position: absolute;    
+    z-index: -1;
 }
 
 .loginPage_topDiv {
@@ -15,6 +38,14 @@
     /* background-color: blue; */
 }
 
+.registerPage_topDiv {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    /* background-color: blue;     */
+}
+
 .loginPage_loginDiv {
     flex: 1.5;
     display: flex;
@@ -23,12 +54,12 @@
     /* background-color: red; */
 }
 
-.signinInput {
-    width: 30%;
-    height: 3em;
-    margin: 0.6em auto;
-    border-radius: 15px;
-    padding: 0.5em;
+.registerPage_registerDiv {
+    flex: 1.5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* background-color: red;     */
 }
 
 .loginPage_loginButton {
@@ -36,11 +67,9 @@
     margin: 2em auto;
 }
 
-.loginPage_noAccountText {
-    font-size: 1.5em;
-    margin-bottom: 1em;
-    color: white;
-    text-align: center;
+.registerPage_registerButton {
+    width: 30%;
+    margin: 2em auto;   
 }
 
 .loginPage_links {
@@ -58,4 +87,29 @@
     justify-content: flex-start;
     text-align: center; 
     /* background-color: greenyellow; */
+}
+
+.registerPage_bottomDiv {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: center; 
+    /* background-color: greenyellow;    */
+}
+
+.signinInput {
+    width: 30%;
+    height: 3em;
+    margin: 0.6em auto;
+    border-radius: 15px;
+    padding: 0.5em;
+}
+
+.loginPage_noAccountText {
+    font-size: 1.5em;
+    margin-bottom: 1em;
+    color: white;
+    text-align: center;
 }
