Small style changes
Co-Authored-By: Aurelijus <147794452+AurelijusLuksas@users.noreply.github.com>

--- a/client/src/boards/css/buttons.css
+++ b/client/src/boards/css/buttons.css
@@ -60,3 +60,16 @@
     height: 15%;
     margin: 2em auto;
 }
+
+.hyperlink {
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    color: #0c4480;
+    text-decoration: none;
+    cursor: pointer;
+    display: inline;
+}
+
+.hyperlink:hover {
+    color: white; /* Adjust hover text color as needed */
+}
