--- a/client/src/boards/css/timer.css
+++ b/client/src/boards/css/timer.css
@@ -1,10 +1,31 @@
 .timer-container {
     display: flex;
+    flex-direction: row;
+    background-color: transparent;
     justify-content: space-between; /* Align items in the container */
     align-items: center; /* Center items vertically */
-    
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    width: 100%; /* Ensure the container takes up the full width */
+}
+
+.timer-text-container {
+    display: flex;
+    flex-direction: row; /* Align text elements in a row */
+    gap: 5px; /* Optional: Add some space between text elements */
 }
 
 .toggle-button {
     margin-left: auto; /* Push the button to the right */
+    padding: 5px 10px; 
+    font-size: 16px; 
+    width: 50%;
+    background-color: transparent;
+    color: white;
+    border: 4px solid #FFF8E8;
+    border-radius: 12px; /* Optional: Add border radius */
+    cursor: pointer; /* Optional: Change cursor to pointer */
+    font-family: "Poppins", sans-serif; 
 }
