--- a/client/src/boards/css/timer.css
+++ b/client/src/boards/css/timer.css
@@ -7,7 +7,7 @@
     font-family: "Poppins", sans-serif;
     font-size: 14px;
     font-weight: bold;
-    color: white;
+    color: #FFF8E8;
     width: 100%; /* Ensure the container takes up the full width */
 }
 
@@ -27,7 +27,7 @@
     width: 20%;
     height: 100%;
     background-color: transparent;
-    color: white;
+    color: #FFF8E8;
     border: 4px solid #FFF8E8;
     border-radius: 12px; /* Optional: Add border radius */
     cursor: pointer; /* Optional: Change cursor to pointer */
