--- a/client/src/boards/css/mode1.css
+++ b/client/src/boards/css/mode1.css
@@ -1,12 +1,29 @@
-.MainBoard_mode1 {
+.Mode1_content {
+  display: flex;
   position: absolute;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: #AAB396;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: scroll;
+  background-origin: padding-box;
+  background-clip: border-box;
+  z-index: 8;
+}
+.MainBoard_mode1 {
+  position: flex;
   width: 100%;
   height: 100%;
-  display: none;
+  display: flex;
   flex-direction: column;
   background-color: #AAB396;
   background-repeat: no-repeat;
-  background-position: 50%;
+  background-position: center;
   background-size: cover;
   background-attachment: scroll;
   background-origin: padding-box;
