--- a/client/src/boards/css/mode1.css
+++ b/client/src/boards/css/mode1.css
@@ -35,6 +35,7 @@
   background-color: #808E67;
   position: absolute;
   width: 100%;
+  height: 7%;
   visibility: visible;
   justify-content: center;
   align-items: center;
