--- a/client/src/boards/css/mode1.css
+++ b/client/src/boards/css/mode1.css
@@ -180,7 +180,9 @@
   height: 80%;
   justify-content: center;
   box-sizing: border-box;
+  overflow: hidden;
 }
+
 .mode1_upperDiv {
   background-color: #AAB396;
   position: relative;
