--- a/client/src/boards/css/loginPage.css
+++ b/client/src/boards/css/loginPage.css
@@ -121,6 +121,24 @@
     font-family: "Poppins", sans-serif;
 }
 
+.signinInputRepeat.error {
+    width: 30%;
+    height: 3em;
+    margin: 0.6em auto;
+    border-radius: 15px;
+    padding: 0.5em;
+    font-family: "Poppins", sans-serif;
+    border: 2px solid red;
+}
+
+.signinInputRepeat {
+    width: 30%;
+    height: 3em;
+    margin: 0.6em auto;
+    border-radius: 15px;
+    padding: 0.5em;
+    font-family: "Poppins", sans-serif;
+}
 .loginPage_noAccountText {
     font-size: 1.5em;
     margin-bottom: 1em;
