--- a/client/src/boards/css/loginPage.css
+++ b/client/src/boards/css/loginPage.css
@@ -22,6 +22,7 @@
 }
 
 .loginContainer {
+    align-items: center;
     width: 100%;
     height: 100%;
     display: flex;
@@ -33,6 +34,7 @@
 }
 
 .registerContainer {
+    align-items: center;
     width: 100%;
     height: 100%;
     display: flex;
@@ -60,30 +62,25 @@
 }
 
 .loginPage_loginDiv {
+    gap: 1em;
     flex: 1.5;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 25%;
     /* background-color: red; */
 }
 
 .registerPage_registerDiv {
+    gap: 1em;
     flex: 1.5;
     display: flex;
+    width: 25%;
     flex-direction: column;
     justify-content: center;
     /* background-color: red;     */
 }
 
-/* .loginPage_loginButton {
-    width: 30%;
-    margin: 2em auto;
-}
-
-.registerPage_registerButton {
-    width: 30%;
-    margin: 2em auto;   
-} */
 
 .loginPage_links {
     display: flex;
